--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 	<body>
 
-		<nav>  			<!-- Флекс контейнер для шапки сайту -->
+		<nav class="nav">  			<!-- Флекс контейнер для шапки сайту -->
+			<div class="logo"><img src="img/logo.jpg" width="100%" height="100%"></div>
 			<ul class="order">
-				<li><a href="#">ITEM</a></li>
+				<li class="current"><a href="#">ITEM</a></li>
 				<li><a href="#">ITEM</a></li>
 				<li><a href="#">ITEM</a></li>
 				<li><a href="#">ITEM</a></li>
 				<li><a href="#">ITEM</a></li>
 			</ul>
 		</nav>
-		<div class="logo"><img src="img/logo.jpg" width="100%" height="100%"></div>
 
 		<main>
 			<div class="background">         <!-- Контейнер для фонової підкладки -->
