--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 				<div class="right arrow">
 					<a href="#"><img src="img/arrow_right.png" width="100%"></a>
 				</div>
+
+
+						<input type="radio" id="left_btn" value="left_btn" name="one"/>
+						<input type="radio" id="mid_btn"checked name="one"/>
+						<input type="radio" id="right_btn" value="right_btn" name="one"/>
+
 				<div class="hidden_container">
 					<div class="slider">   
 						<div class="img">
@@ -70,13 +76,6 @@
 							<img src="img/img2.jpg" width="100%">
 							<p>LOREM IPSUM</p>
 						</div>
-					</div>
-				</div>
-				<div class="check">
-					<div class="checkButton">
-						<input type="radio" id="left_btn" value="left_btn" name="one"/>
-						<input type="radio" checked name="one"/>
-						<input type="radio" id="right_btn" value="right_btn" name="one"/>
 					</div>
 				</div>
 			</div>
